--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -52,8 +52,7 @@
 
       {% for author in entry.author_array limit: author_array_limit %}
         {% assign author_is_self = false %}
-        {%- assign author_last_name = author.last | regex_replace: '[*∗†‡§¶‖&^]', '' -%}
-        {%- assign author_last_html = author.last | regex_replace: '([*∗†‡§¶‖&^]+)', '<sup>\1</sup>' -%}
+        {% assign author_last_name = author.last | remove: '¶' | remove: '&' | remove: '*' | remove: '<sup>†</sup>' | remove: '^' %}
         {% if site.scholar.last_name contains author_last_name %}
           {% if site.scholar.first_name contains author.first %}
             {% assign author_is_self = true %}
@@ -105,7 +104,6 @@
             {% assign more_authors_show = more_authors_show | append: ', ' %}
           {% endunless %}
         {% endfor %}
-        {%- assign more_authors_show = more_authors_show | regex_replace: '([*∗†‡§¶‖&^]+)', '<sup>\1</sup>' -%}
         , and
         <span
           class="more-authors"
