--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -52,7 +52,7 @@
 
       {% for author in entry.author_array limit: author_array_limit %}
         {% assign author_is_self = false %}
-        {% assign author_last_name = author.last | remove: '¶' | remove: '&' | remove: '<sup>*</sup>' | remove: '<sup>†</sup>' | remove: '^' %}
+        {% assign author_last_name = author.last | remove: '¶' | remove: '&' | remove: '<sup>*</sup>' | remove: '<sup>,</sup>' | remove: '<sup>†</sup>' | remove: '^' %}
         {% if site.scholar.last_name contains author_last_name %}
           {% if site.scholar.first_name contains author.first %}
             {% assign author_is_self = true %}
